package it.unibo.samplejavafx.mvc.model.entity;

/**
 * placeholder.
 */
public class ChessMatchObserverImpl {


}
